set(kdiamond_IMGS
    kdiamond-background.svg
    kdiamond-black.svg
    kdiamond-blue.svg
    kdiamond-green.svg
    kdiamond-orange.svg
    kdiamond-red.svg
    kdiamond-selected.svg
    kdiamond-white.svg
    kdiamond-yellow.svg
)
install(FILES ${kdiamond_IMGS} DESTINATION ${DATA_INSTALL_DIR}/kdiamond)
